[package]
name = "rweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
pretty_env_logger = "0.4"

[profile.dev]
lto = false
opt-level = 0
incremental = true
debug = true